[package]
name = "starlog"
version = "0.1.0"
authors = ["Guillaume Pasquet <dev@etenil.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slack-hook2 = "0.10.0"
clap = "2.33.1"
tokio = { version = "0.2.21", features = ["rt-core"] }
